# clusiv-data

./: .gitignore  MIGRATION_PLAN.md  Start-Clusiv-Data.cmd  ai-config.json  clusiv-data.py  config.py  debug_filter.py  index.html  main.py  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
backups/: backup_auto_2026-04-04_23-31-33.json  backup_auto_2026-04-05_09-59-34.json  backup_auto_2026-04-05_10-46-45.json  backup_auto_2026-04-05_11-27-13.json  backup_auto_2026-04-05_15-23-42.json  backup_auto_2026-04-10_17-03-32.json  backup_auto_2026-04-12_10-17-20.json  backup_auto_2026-04-12_12-44-56.json  backup_auto_2026-04-12_14-16-24.json  backup_auto_2026-04-12_15-03-23.json  backup_auto_2026-04-17_13-59-15.json  backup_manual_2026-04-05_10-07-04.json  backup_manual_2026-04-05_10-11-13.json  backup_manual_2026-04-05_11-55-40.json  backup_manual_2026-04-05_11-59-32.json  backup_manual_2026-04-05_12-05-39.json  backup_manual_2026-04-05_14-42-45.json
clusiv-data-quick-texts-phased-plan/: README_AGENT.md  phase-1-baseline-and-architecture-validation.md  phase-2-data-model-and-safe-migration.md  phase-3-store-actions-and-observability.md  phase-4-dialogs-and-group-assignment.md  phase-5-grouped-ui-components.md  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: backup.rs  data.rs  llm.rs  logs.rs  mod.rs  shell.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/models/: app_data.rs  category.rs  item.rs  llm.rs  mod.rs
(+169 files in other folders)
